src/user_level_lang/NFCPUserParser.py
# Generated from NFCPUser.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class NFCPUserParser ( Parser ):

    grammarFileName = "NFCPUser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'='", u"':'", u"'('", u"')'", u"'['", 
                     u"','", u"']'", u"'{'", u"'}'", u"'->'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"MULTILINECOMMENT", 
                      u"SINGLELINECOMMENT", u"WHITESPACE", u"NEWLINE", u"INT", 
                      u"FLOAT", u"STRING", u"BOOL", u"VARIABLENAME" ]

    RULE_total = 0
    RULE_line = 1
    RULE_define_int = 2
    RULE_define_float = 3
    RULE_define_string = 4
    RULE_define_bool = 5
    RULE_define_nfinstance = 6
    RULE_define_nlist = 7
    RULE_define_ntuple = 8
    RULE_define_nlinkedlist = 9
    RULE_define_flowspec = 10
    RULE_define_nfchain = 11
    RULE_config_nfchain = 12
    RULE_flowspec = 13
    RULE_netfunction_chain = 14
    RULE_netfunction = 15
    RULE_nlist = 16
    RULE_nlist_elem = 17
    RULE_ntuple = 18
    RULE_ntuple_elem = 19
    RULE_nlinkedlist = 20
    RULE_nlinkedlist_elem = 21

    ruleNames =  [ u"total", u"line", u"define_int", u"define_float", u"define_string", 
                   u"define_bool", u"define_nfinstance", u"define_nlist", 
                   u"define_ntuple", u"define_nlinkedlist", u"define_flowspec", 
                   u"define_nfchain", u"config_nfchain", u"flowspec", u"netfunction_chain", 
                   u"netfunction", u"nlist", u"nlist_elem", u"ntuple", u"ntuple_elem", 
                   u"nlinkedlist", u"nlinkedlist_elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    MULTILINECOMMENT=11
    SINGLELINECOMMENT=12
    WHITESPACE=13
    NEWLINE=14
    INT=15
    FLOAT=16
    STRING=17
    BOOL=18
    VARIABLENAME=19

    def __init__(self, input, output=sys.stdout):
        super(NFCPUserParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TotalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.TotalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(NFCPUserParser.EOF, 0)

        def line(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(NFCPUserParser.LineContext)
            else:
                return self.getTypedRuleContext(NFCPUserParser.LineContext,i)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_total

        def enterRule(self, listener):
            if hasattr(listener, "enterTotal"):
                listener.enterTotal(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTotal"):
                listener.exitTotal(self)




    def total(self):

        localctx = NFCPUserParser.TotalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.line()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==NFCPUserParser.NEWLINE or _la==NFCPUserParser.VARIABLENAME):
                    break

            self.state = 49
            self.match(NFCPUserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.LineContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(NFCPUserParser.NEWLINE, 0)

        def define_int(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_intContext,0)


        def define_float(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_floatContext,0)


        def define_string(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_stringContext,0)


        def define_bool(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_boolContext,0)


        def define_nfinstance(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_nfinstanceContext,0)


        def define_nlist(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_nlistContext,0)


        def define_ntuple(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_ntupleContext,0)


        def define_nlinkedlist(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_nlinkedlistContext,0)


        def define_flowspec(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_flowspecContext,0)


        def define_nfchain(self):
            return self.getTypedRuleContext(NFCPUserParser.Define_nfchainContext,0)


        def config_nfchain(self):
            return self.getTypedRuleContext(NFCPUserParser.Config_nfchainContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_line

        def enterRule(self, listener):
            if hasattr(listener, "enterLine"):
                listener.enterLine(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLine"):
                listener.exitLine(self)




    def line(self):

        localctx = NFCPUserParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 51
                self.define_int()

            elif la_ == 2:
                self.state = 52
                self.define_float()

            elif la_ == 3:
                self.state = 53
                self.define_string()

            elif la_ == 4:
                self.state = 54
                self.define_bool()

            elif la_ == 5:
                self.state = 55
                self.define_nfinstance()

            elif la_ == 6:
                self.state = 56
                self.define_nlist()

            elif la_ == 7:
                self.state = 57
                self.define_ntuple()

            elif la_ == 8:
                self.state = 58
                self.define_nlinkedlist()

            elif la_ == 9:
                self.state = 59
                self.define_flowspec()

            elif la_ == 10:
                self.state = 60
                self.define_nfchain()

            elif la_ == 11:
                self.state = 61
                self.config_nfchain()


            self.state = 64
            self.match(NFCPUserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_intContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_intContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def INT(self):
            return self.getToken(NFCPUserParser.INT, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_int

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_int"):
                listener.enterDefine_int(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_int"):
                listener.exitDefine_int(self)




    def define_int(self):

        localctx = NFCPUserParser.Define_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_define_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 67
            self.match(NFCPUserParser.T__0)
            self.state = 68
            self.match(NFCPUserParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_floatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_floatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def FLOAT(self):
            return self.getToken(NFCPUserParser.FLOAT, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_float

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_float"):
                listener.enterDefine_float(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_float"):
                listener.exitDefine_float(self)




    def define_float(self):

        localctx = NFCPUserParser.Define_floatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_define_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 71
            self.match(NFCPUserParser.T__0)
            self.state = 72
            self.match(NFCPUserParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_stringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_stringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def STRING(self):
            return self.getToken(NFCPUserParser.STRING, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_string

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_string"):
                listener.enterDefine_string(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_string"):
                listener.exitDefine_string(self)




    def define_string(self):

        localctx = NFCPUserParser.Define_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_define_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 75
            self.match(NFCPUserParser.T__0)
            self.state = 76
            self.match(NFCPUserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_boolContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_boolContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def BOOL(self):
            return self.getToken(NFCPUserParser.BOOL, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_bool

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_bool"):
                listener.enterDefine_bool(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_bool"):
                listener.exitDefine_bool(self)




    def define_bool(self):

        localctx = NFCPUserParser.Define_boolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_define_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 79
            self.match(NFCPUserParser.T__0)
            self.state = 80
            self.match(NFCPUserParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_nfinstanceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_nfinstanceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def netfunction(self):
            return self.getTypedRuleContext(NFCPUserParser.NetfunctionContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_nfinstance

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_nfinstance"):
                listener.enterDefine_nfinstance(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_nfinstance"):
                listener.exitDefine_nfinstance(self)




    def define_nfinstance(self):

        localctx = NFCPUserParser.Define_nfinstanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_define_nfinstance)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 83
            self.match(NFCPUserParser.T__0)
            self.state = 84
            self.netfunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_nlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_nlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def nlist(self):
            return self.getTypedRuleContext(NFCPUserParser.NlistContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_nlist

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_nlist"):
                listener.enterDefine_nlist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_nlist"):
                listener.exitDefine_nlist(self)




    def define_nlist(self):

        localctx = NFCPUserParser.Define_nlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_define_nlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 87
            self.match(NFCPUserParser.T__0)
            self.state = 88
            self.nlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_ntupleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_ntupleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def ntuple(self):
            return self.getTypedRuleContext(NFCPUserParser.NtupleContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_ntuple

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_ntuple"):
                listener.enterDefine_ntuple(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_ntuple"):
                listener.exitDefine_ntuple(self)




    def define_ntuple(self):

        localctx = NFCPUserParser.Define_ntupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_define_ntuple)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 91
            self.match(NFCPUserParser.T__0)
            self.state = 92
            self.ntuple()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_nlinkedlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_nlinkedlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def nlinkedlist(self):
            return self.getTypedRuleContext(NFCPUserParser.NlinkedlistContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_nlinkedlist

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_nlinkedlist"):
                listener.enterDefine_nlinkedlist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_nlinkedlist"):
                listener.exitDefine_nlinkedlist(self)




    def define_nlinkedlist(self):

        localctx = NFCPUserParser.Define_nlinkedlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_define_nlinkedlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 95
            self.match(NFCPUserParser.T__0)
            self.state = 96
            self.nlinkedlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_flowspecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_flowspecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def flowspec(self):
            return self.getTypedRuleContext(NFCPUserParser.FlowspecContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_flowspec

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_flowspec"):
                listener.enterDefine_flowspec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_flowspec"):
                listener.exitDefine_flowspec(self)




    def define_flowspec(self):

        localctx = NFCPUserParser.Define_flowspecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_define_flowspec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 99
            self.match(NFCPUserParser.T__0)
            self.state = 100
            self.flowspec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_nfchainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Define_nfchainContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def netfunction_chain(self):
            return self.getTypedRuleContext(NFCPUserParser.Netfunction_chainContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_define_nfchain

        def enterRule(self, listener):
            if hasattr(listener, "enterDefine_nfchain"):
                listener.enterDefine_nfchain(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefine_nfchain"):
                listener.exitDefine_nfchain(self)




    def define_nfchain(self):

        localctx = NFCPUserParser.Define_nfchainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_define_nfchain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 103
            self.match(NFCPUserParser.T__0)
            self.state = 104
            self.netfunction_chain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Config_nfchainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Config_nfchainContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self, i=None):
            if i is None:
                return self.getTokens(NFCPUserParser.VARIABLENAME)
            else:
                return self.getToken(NFCPUserParser.VARIABLENAME, i)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_config_nfchain

        def enterRule(self, listener):
            if hasattr(listener, "enterConfig_nfchain"):
                listener.enterConfig_nfchain(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConfig_nfchain"):
                listener.exitConfig_nfchain(self)




    def config_nfchain(self):

        localctx = NFCPUserParser.Config_nfchainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_config_nfchain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 107
            self.match(NFCPUserParser.T__1)
            self.state = 108
            self.match(NFCPUserParser.VARIABLENAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FlowspecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.FlowspecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nlist(self):
            return self.getTypedRuleContext(NFCPUserParser.NlistContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_flowspec

        def enterRule(self, listener):
            if hasattr(listener, "enterFlowspec"):
                listener.enterFlowspec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFlowspec"):
                listener.exitFlowspec(self)




    def flowspec(self):

        localctx = NFCPUserParser.FlowspecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_flowspec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.nlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Netfunction_chainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Netfunction_chainContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nlinkedlist(self):
            return self.getTypedRuleContext(NFCPUserParser.NlinkedlistContext,0)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_netfunction_chain

        def enterRule(self, listener):
            if hasattr(listener, "enterNetfunction_chain"):
                listener.enterNetfunction_chain(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNetfunction_chain"):
                listener.exitNetfunction_chain(self)




    def netfunction_chain(self):

        localctx = NFCPUserParser.Netfunction_chainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_netfunction_chain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.nlinkedlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NetfunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.NetfunctionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_netfunction

        def enterRule(self, listener):
            if hasattr(listener, "enterNetfunction"):
                listener.enterNetfunction(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNetfunction"):
                listener.exitNetfunction(self)




    def netfunction(self):

        localctx = NFCPUserParser.NetfunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_netfunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(NFCPUserParser.VARIABLENAME)
            self.state = 115
            self.match(NFCPUserParser.T__2)
            self.state = 116
            self.match(NFCPUserParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.NlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nlist_elem(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(NFCPUserParser.Nlist_elemContext)
            else:
                return self.getTypedRuleContext(NFCPUserParser.Nlist_elemContext,i)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_nlist

        def enterRule(self, listener):
            if hasattr(listener, "enterNlist"):
                listener.enterNlist(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNlist"):
                listener.exitNlist(self)




    def nlist(self):

        localctx = NFCPUserParser.NlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_nlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(NFCPUserParser.T__4)

            self.state = 119
            self.nlist_elem()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NFCPUserParser.T__5:
                self.state = 120
                self.match(NFCPUserParser.T__5)
                self.state = 121
                self.nlist_elem()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(NFCPUserParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Nlist_elemContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.Nlist_elemContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ntuple(self):
            return self.getTypedRuleContext(NFCPUserParser.NtupleContext,0)


        def INT(self):
            return self.getToken(NFCPUserParser.INT, 0)

        def FLOAT(self):
            return self.getToken(NFCPUserParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(NFCPUserParser.STRING, 0)

        def VARIABLENAME(self):
            return self.getToken(NFCPUserParser.VARIABLENAME, 0)

        def getRuleIndex(self):
            return NFCPUserParser.RULE_nlist_elem

        def enterRule(self, listener):
            if hasattr(listener, "enterNlist_elem"):
                listener.enterNlist_elem(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNlist_elem"):
                listener.exitNlist_elem(self)




    def nlist_elem(self):

        localctx = NFCPUserParser.Nlist_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_nlist_elem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NFCPUserParser.T__7]:
                self.state = 129
                self.ntuple()
                pass
            elif token in [NFCPUserParser.INT]:
                self.state = 130
                self.match(NFCPUserParser.INT)
                pass
            elif token in [NFCPUserParser.FLOAT]:
                self.state = 131
                self.match(NFCPUserParser.FLOAT)
                pass
            elif token in [NFCPUserParser.STRING]:
                self.state = 132
                self.match(NFCPUserParser.STRING)
                pass
            elif token in [NFCPUserParser.VARIABLENAME]:
                self.state = 133
                self.match(NFCPUserParser.VARIABLENAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NtupleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(NFCPUserParser.NtupleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ntuple_elem(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(NFCPUserParser.Ntuple_elemContext)
            else:
                return self.getTypedRuleContext(NFCPUserParser.Ntuple_elemContext,i)


        def getRuleIndex(self):
            return NFCPUserParser.RULE_ntuple

        def enterRule(self, listener):
            if hasattr(listener, "enterNtuple"):
                listener.enterNtuple(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNtuple"):
                listener.exitNtuple(self)




    def ntuple(self):

        localctx = NFCPUserParser.NtupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_ntuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(NFCPUserParser.T__7)
